<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="Super :)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oceny"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="103dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_weight="2"
        android:text="@string/imie"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imie"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/podaj_imie"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_weight="2"
        android:text="@string/nazwisko"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/nazwisko"
        android:layout_width="211dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/podaj_nazwisko"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imie"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="27dp"
        android:layout_weight="2"
        android:text="@string/liczba_ocen"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/oceny"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/oceny" />

    <EditText
        android:id="@+id/oceny"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/oceny"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/nazwisko" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="oceny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oceny" />

    <TextView
        android:id="@+id/srednia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srednia" />
</androidx.constraintlayout.widget.ConstraintLayout>